# Bilibili

./: README.md  settings.gradle
LeetCode100/: 1.java  2.java  3.java  work1.java
Server/: db.create.js  index.js  package-lock.json  package.json
View/src/main/res/drawable/: bg_add_pic_btn_vector.xml  bg_comment_layout_live_fade.xml  bg_text_follow_btn_shape.xml  shape_bannar_video_item.xml
View/src/main/res/values/: styles.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/assets/: uni.e12d6890.css
app/src/main/cpp/: CMakeLists.txt  Main.cpp  native-lib.cpp
app/src/main/res/drawable/: analytics_item_shape.xml  analytics_item_shape2.xml  balance_card_shape.xml  balance_card_shape2.xml  baseline_account_circle_24.xml  baseline_home_24.xml  baseline_shopping_bag_24.xml  border_of_viewgroup.xml  bottom_item_select.xml  find_back2.xml  find_search_bg.xml  find_trans_cover_color.xml  register_button.xml  register_edittext.xml  round_shape_red.xml  round_shape_yellow.xml  scan_bg.xml  search_bg.xml  select_year_shape.xml  tab_indicator.xml  top_bar_icon.xml  trending_item_bg.xml  trending_item_hot_bg.xml
app/src/main/res/drawable-v24/: edit_profile_btn_bg.xml  me_topbar_bg.xml
app/src/main/res/layout/: activity_camera_xactivity.xml  activity_communicate.xml  activity_cookie.xml  activity_coroutine.xml  activity_create_room.xml  activity_custom.xml  activity_dialog.xml  activity_dynamic.xml  activity_event.xml  activity_find.xml  activity_fragment.xml  activity_h264.xml  activity_home.xml  activity_introduce.xml  activity_layout.xml  activity_list.xml  activity_list_item.xml  activity_login.xml  activity_login2.xml  activity_login_tik.xml  activity_main.xml  activity_main2.xml  activity_main_trading.xml  activity_ok_http.xml  activity_pager.xml  activity_permission.xml  activity_play.xml  activity_player.xml  activity_profile.xml  activity_register_tik.xml  activity_retrofit.xml  activity_rtmp.xml  activity_scan.xml  activity_splash.xml  activity_video_list.xml  activity_view_pager2.xml  analytics_item.xml  container_activity_main.xml  (+39 more)
app/src/main/res/layout-land/: activity_dynamic.xml
app/src/main/res/layout-w1240dp/: activity_login.xml
app/src/main/res/layout-w936dp/: activity_login.xml
dark/: 变量.dart
gradle/wrapper/: gradle-wrapper.properties
ktLearn/: build.bat  main.kt  run.bat
ktLearn/KotlinIO/: file.txt  settings.gradle.kts
ktLearn/KotlinIO/gradle/wrapper/: gradle-wrapper.properties
loadsir/: build.gradle
playerCore/: build.gradle
playerCore/src/main/cpp/: CMakeLists.txt  DataC.cxx  IObserverC.cxx  IPlayerC.cxx  LogC.cxx  MainC.cxx
playerCore/src/main/cpp/audio/: AudioPlayerC.cxx
playerCore/src/main/cpp/decode/: AudioDecodeC.cxx  DemuxC.cxx  VideoDecodeC.cxx
playerCore/src/main/cpp/resample/: AudioResampleC.cxx
playerCore/src/main/cpp/video/: EGLC.cxx  ShaderC.cxx  VideoPlayerC.cxx
zchan_audio/: build.gradle
zchan_audio/src/main/: AndroidManifest.xml
zchan_audio/src/main/cpp/: CMakeLists.txt  zchan_audio.cpp
zchan_faacencoder/: build.gradle
zchan_faacencoder/src/main/: AndroidManifest.xml
zchan_faacencoder/src/main/cpp/: CMakeLists.txt  FaacEncoder.cxx  Main.cxx
zchan_ffmpegrtmp/src/main/cpp/: CMakeLists.txt  ScreenLive.cpp
zchan_ffrtmp/: build.gradle
zchan_ffrtmp_plus/: build.gradle
zchan_ffrtmp_plus/src/main/: AndroidManifest.xml
zchan_ffrtmp_plus/src/main/cpp/: AudioEncoder.cxx  CMakeLists.txt  MainRTMP.cxx  Packet.cxx  PushQueue.cxx  VideoEncoder.cxx
zchan_hardrtmp/: build.gradle
zchan_hardrtmp/src/main/: AndroidManifest.xml
zchan_hardrtmp/src/main/cpp/: CMakeLists.txt  MainHard.cpp
zchan_librtmp/: build.gradle
zchan_librtmp/src/main/: AndroidManifest.xml
zchan_librtmp/src/main/cpp/: CMakeLists.txt  FaacEncoder.cxx  LibRtmp.cxx  Main.cxx  SafeQueue.cxx  SwsVideo.cxx  X264Encoder.cxx
zchan_librtmp/src/main/cpp/include/libx264/: x264_config.h
zchan_librtmp/src/main/cpp/librtmp/: rtmp.c
zchan_opengl/: build.gradle
zchan_opengl/src/main/: AndroidManifest.xml
zchan_opengl/src/main/cpp/: CMakeLists.txt  zchan_opengl.cpp
zchan_orgrtmp/: build.gradle
zchan_orgrtmp/src/main/: AndroidManifest.xml
zchan_orgrtmp/src/main/cpp/: CMakeLists.txt  OrgRTMP.cxx  zchan_orgrtmp.cpp
zchan_player/: build.gradle
zchan_player/src/main/: AndroidManifest.xml
zchan_player/src/main/cpp/: CMakeLists.txt  Main.cpp
zchan_player_annotating/: build.gradle
zchan_player_annotating/src/main/: AndroidManifest.xml
zchan_player_annotating/src/main/cpp/: AndroidEGL.cxx  CMakeLists.txt  FFAudioDecode.cxx  FFData.cxx  FFDemux.cxx  FFObserver.cxx  FFVideoDecode.cxx  GLShader.cxx  GLVideoPlayer.cxx  MainAnnotating.cxx  MainInterface.cxx  SLAudioPlayer.cxx
zchan_player_handwrite/: build.gradle
zchan_player_handwrite/src/main/: AndroidManifest.xml
zchan_player_handwrite/src/main/cpp/: CMakeLists.txt  MainHand.cxx
zchan_player_plus/: build.gradle
zchan_player_plus/src/main/: AndroidManifest.xml
zchan_player_plus/src/main/cpp/: CMakeLists.txt  Data.cxx  IObserver.cxx  IPlayer.cxx  Main.cxx
zchan_rtmp/: build.gradle
zchan_rtmp/src/main/: AndroidManifest.xml
zchan_rtmp/src/main/cpp/: CMakeLists.txt  ScreenLive.cpp  ScreenLiveX.bak
zchan_structure/: build.gradle
zchan_structure/src/main/: AndroidManifest.xml
zchan_structure/src/main/cpp/: CMakeLists.txt  Data.cxx  Main.cxx  zchan_structure.cpp
zchan_structure/src/main/cpp/audio/: AudioPlayer.cxx
zchan_structure/src/main/cpp/decode/: AudioDecode.cxx  Demux.cxx  VideoDecode.cxx
zchan_structure/src/main/cpp/resample/: AudioResample.cxx
zchan_structure/src/main/cpp/video/: EGL.cxx
zchan_view/: build.gradle
zchan_webview/: build.gradle
zchan_webview/src/main/: AndroidManifest.xml
zchan_webview/src/main/assets/: demo.html
zchan_x264encoder/: build.gradle
zchan_x264encoder/src/main/: AndroidManifest.xml
zchan_x264encoder/src/main/cpp/: CMakeLists.txt  Main.cxx  X264Encoder.cxx
zchan_yuv/: build.gradle
zchan_yuv/src/main/: AndroidManifest.xml
zchan_yuv/src/main/cpp/: CMakeLists.txt  zchan_yuv.cpp
(+369 files in other folders)
